# aulas

./: README.md  _config.yml  index.md
mata37/: README.md  algoritmo.md  entradasaida.md  exercicios.md  turtleacademy.md
mata37/exercicios/: ex03-conceitos.md  exercicio01-turtle.md  exercicio02-troco.md  exercicio02.md  exercicio03-conceitos.md  exercicio04-ambientes-ES.md  exercicio04-ambientes.md  exercicio04-somaAB.md  exercicio05-entradasaida.md  exercicio05.md  exercicio06.md  lista01-uri.md  lista01.md  lista02.md
mata37/tests/template/: CMakeLists.txt  run.sh
mata37/tests/template/include/: cubic.h
mata37/tests/template/lib/pkgconfig/: gmock.pc  gmock_main.pc
mata37/tests/template/src/: CMakeLists.txt  main.cpp
mata37/tests/template/src/cubic/: CMakeLists.txt  cubic.cpp
mata37/tests/template/test/: CMakeLists.txt
mata37/tests/template/test/src/: cubic_tests.cpp
mata37/tutorial/: atribuicao.md  repeticao-2.md  repeticao.md  selecao.md  switch.md  tipos.md  turtleacademy.md  variaveis.md
matd04/: README.md
matd04/atividades/filas/: IntegerQueue.h
matd04/atividades/listas/: IntegerList.h
matd04/atividades/pilhas/: IntegerStack.h
matd04/exercicios/: lista02.md  lista03.md  listas01.md
matd04/integerlisttest/: CMakeLists.txt  README.md
matd04/integerlisttest/src/: CMakeLists.txt  main.cpp  main.h
matd04/integerlisttest/src/integerlist/: CMakeLists.txt  IntegerList.cpp  IntegerList.h
matd04/integerlisttest/test/: CMakeLists.txt
matd04/integerlisttest/test/src/: integerlist_tests.cpp
matd04/tutorial/: analisedealgoritmos.md  arvores.md  buscasequencial.md  estruturasfundamentais.md  filas.md  listas.md  pilhas.md  tiposabstratosdedados.md
